--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,12 +3,14 @@ name: Go
 on:
   push:
     branches: [ main ]
+    paths:
+      - '**.go'
   pull_request:
     branches: [ main ]
 
 jobs:
 
-  gotest:
+  Test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
